# fastapi_backend_mongo

./: README.md  logging_config.py  main.py  pyproject.toml  setup_mongo.py  utils.py
app/: logging_config.py  main.py  setup_mongo.py  utils.py
app/db/: mongo.py
app/integrations/: fmp.py
app/models/: schemas.py
fmp_utils/: mongo.py
