[project]
name = "fastapi-backend-mongo"
version = "0.1.0"
description = ""
authors = [
    {name = "Khalid Alkhalili",email = "kfkhalili@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
pandas = "^2.2.3"
fmpsdk = "^20250102.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
